--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,8 @@
-/* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;1,100&display=swap');   
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200&display=swap');
 
 body{
-font-family: 'IBM Plex Mono', monospace;
+ font-family: 'Josefin Sans', sans-serif;
  transition: all 0.3s ease-in-out;
 
 }
- */
+
