--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200&display=swap');
+
 
 body{
- font-family: 'Josefin Sans', sans-serif;
+/* font-family: 'Poppins', sans-serif; */
  transition: all 0.3s ease-in-out;
 
 }
